--- a/html/index.html
+++ b/html/index.html
@@ -1,11 +1,70 @@
-<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Etsy Pakistan - shop for handmade</title>
+    <link rel="stylesheet" href="../css/index.css">
+    <link rel="icon" href="../assets/logo.png">
 </head>
+
 <body>
-    
+    <header>
+        <div>
+            <img id="etsy" src="../assets/download.png" alt="">
+            <ul id="nav">
+                <li><a href="home.html">home</a></li>
+                <li><a href="about.html">about</a></li>
+                <li><a href="services.html">services</a></li>
+                <li><a href="contact.html">conatct us</a></li>
+            </ul>
+        </div>
+    </header>
+    <section id="content">
+        <img src="../assets/background.jpg" alt="">
+
+        <div class="images">
+            <li class="">
+                <img class="wt-image"
+                    src="https://i.etsystatic.com/6054905/r/il/fb09a4/3574531004/il_340x270.3574531004_m2me.jpg"
+                    alt="wall hangings">
+                <p>
+                    wall hangings <br> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro quod temporibus
+                    itaque veritatis sapiente magni
+                </p>
+            </li>
+            <li class="">
+                <img class=""
+                    src="https://i.etsystatic.com/14141004/r/il/1429fd/4100416291/il_340x270.4100416291_flwx.jpg"
+                    alt="party and gifting">
+                <p>
+                    party and gifting <br> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro quod
+                    temporibus itaque veritatis sapiente magni
+                </p>
+
+
+            </li>
+            <li class="">
+                <img class=""
+                    src="https://i.etsystatic.com/45781337/c/1622/1622/257/177/il/68108d/6295436067/il_340x270.6295436067_aplv.jpg"
+                    alt="digital prints">
+                <p>
+                    digital prints <br> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro quod temporibus
+                    itaque veritatis sapiente magni
+                </p>
+
+            </li>
+        </div>
+    </section>
+    <footer>
+        <ul>
+            <li><a href="#">Instagram</a></li>
+            <li><a href="#">facebook</a></li>
+            <li><a href="#">Linked In</a></li>
+        </ul>
+    </footer>
+
+
 </body>
+
 </html>
